--- a/front_end.html
+++ b/front_end.html
@@ -7,7 +7,7 @@
 <body>
     <div class="container">
         <h1>DAPP Test</h1>
-        <form id="code-form" action="http://localhost:5000/submit-code" method="post">
+        <form id="code-form" action="http://your-backend-server.com/submit" method="post">
             <textarea id="code-input" placeholder="Enter your code here"></textarea>
             <button type="submit" id="submit-code">Save Code</button>
         </form>
